# quartal-ring

./: .gitignore  CLAUDE.md  Cargo.toml  build.ps1
.claude/: launch.json
.github/workflows/: pages.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: requirements.md
tools/dev-server/: Cargo.toml
tools/dev-server/src/: main.rs
web/: index.html  main.js  quartal_ring_wasm.wasm
