[package]
name = "quartal-loom-wasm"
version = "0.1.0"
description = "Raw integer-ABI wasm adapter over quartal-loom-core (no wasm-bindgen)."
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
quartal-loom-core = { path = "../core" }
