[package]
name = "quartal-ring-wasm"
version = "0.1.0"
description = "Raw integer-ABI wasm adapter over quartal-ring-core (no wasm-bindgen)."
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
quartal-ring-core = { path = "../core" }
