[package]
name = "quartal-ring-dev-server"
version = "0.1.0"
description = "Dev-only static file server for the web preview (std only, no deps). Not part of the shipped product."
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "dev-server"
path = "src/main.rs"
